--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,6 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import 'flowbite/dist/flowbite.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
